[package]
name = "sensor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustblockchainlib"
path = "src/lib.rs"

[[bin]]
name = "rust_blockchain"
path = "src/main.rs"

[dependencies]
crypto-hash = "0.3.4"
rand = "0.7.3"
ed25519-dalek = "1.0.1"
tentacle = { version = "0.3", features = ["molc"] }
tokio = "0.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

